--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1>I'm  Royce</h1>
       <h2 class="normal">a Student</h2>
       <img class="bottom-cloud"src="C:\Users\Royce Christon\Desktop\web development\CSS-My site\images\cloud.png" alt="clouds-image">
-      <img src="C:\Users\Royce Christon\Desktop\web development\CSS-My site\images\student.png" alt="student- image">
+      <img src="https://github.com/RCG10/chris/blob/master/student.png" alt="student- image">
     </div>
     <div class="middle-container">
       <div class="profile">
