--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Christon's Site</title>
-    <link rel="stylesheet" href="C:\Users\Royce Christon\Desktop\web development\CSS-My site\css\styles.css">
-    <link rel="icon" href="C:\Users\Royce Christon\Desktop\web development\CSS-My site\favicon.ico">
+    <link rel="stylesheet" href="https://github.com/RCG10/chris/blob/master/styles.css">
+    <link rel="icon" href="">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Sacramento&display=swap" rel="stylesheet">
 
   </head>
