--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="utf-8">
     <title>Christon's Site</title>
-    <link rel="stylesheet" href="https://github.com/RCG10/chris/blob/master/styles.css">
-    <link rel="icon" href="https://github.com/RCG10/chris/blob/master/favicon.ico">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Sacramento&display=swap" rel="stylesheet">
 
   </head>
   <body>
     <div class="top-container">
-      <img class="top-cloud" src="https://github.com/RCG10/chris/blob/master/cloud.png" alt="clouds-image">
+      <img class="top-cloud" src="cloud.png" alt="clouds-image">
       <h1>I'm  Royce</h1>
       <h2 class="normal">a Student</h2>
-      <img class="bottom-cloud"src="https://github.com/RCG10/chris/blob/master/cloud.png" alt="clouds-image">
-      <img src="https://github.com/RCG10/chris/blob/master/student.png" alt="student- image">
+      <img class="bottom-cloud"src="cloud.png" alt="clouds-image">
+      <img src="student.png" alt="student- image">
     </div>
     <div class="middle-container">
       <div class="profile">
