--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   </head>
   <body>
     <div class="top-container">
-      <img class="top-cloud" src="cloud.png" alt="clouds-image">
+      <img class="top-cloud" src="images/cloud.png" alt="clouds-image">
       <h1>I'm  Royce</h1>
       <h2 class="normal">a Student</h2>
-      <img class="bottom-cloud"src="cloud.png" alt="clouds-image">
+      <img class="bottom-cloud"src="images/cloud.png" alt="clouds-image">
       <img src="student.png" alt="student- image">
     </div>
     <div class="middle-container">
